<resources>
    <string name="app_name">Fingerprint Navigation Controls</string>
    <string name="title_main_options">Main Options</string>
    <string name="title_app_actions">App Actions</string>
    <string name="title_help">Help</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_swipe_actions">Default Swipe Actions</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="general_options">General Options</string>
    <string name="enabled">Enabled</string>
    <string name="service_enabled">Service Enabled</string>
    <string name="recent_app_actions_enabled">Recent App Actions Enabled</string>
    <string name="recent_app_actions">Recent App Actions</string>
    <string name="err_perm_denied">Please grant permissions before using this app</string>
    <string name="err_enabling">There was a problem enabling the service. Please report this so I can fix it ASAP!
    </string>
    <string name="report">report</string>
    <string name="thanks_for_reporting">Thank\'s for reporting! You rock!</string>
    <string name="fingerprint_service">Fingerprint Navigation Controls</string>
    <string name="accessibility_service_description">This service allows for gesture navigation using the fingerprint
        sensor.
    </string>
    <string name="reset_main_options">Reset Options</string>
    <string name="application_icon">Application Icon</string>
    <string name="delete_custom_actions">Delete custom actions</string>
    <string name="custom_actions">custom actions</string>
    <string name="title_custom_actions">&#160;Custom Actions</string>
    <string name="custom_action">custom action</string>
    <string name="save_changes">Save Changes</string>
    <string name="how_do_i_use_this_app">About This App</string>
    <string name="desc_logo">logo</string>
    <string name="view_tutorial">View Tutorial</string>
    <string name="about_desc">This app unlocks the potential of your fingerprint reader, allowing you to perform
        a variety of actions by simply by swiping on it. You can also set custom actions on an app-by-app basis and for the “Recent Apps” menu.
    </string>
    <string name="suggestions">Suggestions?</string>
    <string name="send_suggestion">Send Suggestion</string>
    <string name="found_a_bug">Found a bug?</string>
    <string name="report_bug">Report Bug</string>
    <string name="suggestion_type">Suggestion Type</string>
    <string name="describe_your_suggestion">Describe Your Suggestion:</string>
    <string name="desc">Description</string>
    <string name="send">send</string>
    <string name="submit_suggestion_title">Submit a Suggestion</string>
    <string name="submit_suggestion_desc">Please select a topic and describe your suggestion below.</string>
    <string name="submit_bug_title">Sumbit Bug Report</string>
    <string name="submit_but_desc">Please describe the bug below and select the severity. Thanks for helping out!
    </string>
    <string name="bug_severity">Bug Severity</string>
    <string name="error">Error</string>
    <string name="dismiss">Dismiss</string>
    <string name="report_sent">Report Sent</string>
    <string name="report_sent_desc">Thanks for sending a bug report! We\'ll take a look and get a fix out soon.</string>
    <string name="error_sending_report">There was a problem sending the bug report. Check your internet connection and
        try again.
    </string>
    <string name="suggestion_sent">Suggestion Sent</string>
    <string name="suggestion_sent_desc">Thanks for sending a suggestion! Your input means a lot.</string>
    <string name="error_sending_suggestion">There was a problem sending the suggestion. Please check your internet
        connection and try again
    </string>
    <string name="coming_soon">Coming Soon</string>
    <string name="coming_soon_desc">This feature will be available in a later build.</string>

    <string-array name="gesture_actions">
        <item>None</item>
        <item>Back Action</item>
        <item>Home Action</item>
        <item>Recent Apps</item>
        <item>Notifications Action</item>
        <item>Power Menu</item>
        <item>Quick Settings</item>
        <item>Scroll Left</item>
        <item>Scroll Right</item>
        <item>Scroll Up</item>
        <item>Scroll Down</item>
    </string-array>

    <string-array name="gesture_actions_recent">
        <item>None</item>
        <item>Scroll Left</item>
        <item>Scroll Right</item>
        <item>Select App</item>
        <item>Previous App</item>
        <item>Back Action</item>
        <item>Home Action</item>
        <item>Scroll Up</item>
        <item>Scroll Down</item>
        <item>Notifications Action</item>
        <item>Power Menu</item>
        <item>Quick Settings</item>
        <item>Same as Default Action</item>
    </string-array>

    <string-array name="gesture_actions_app">
        <item>None</item>
        <item>Back Action</item>
        <item>Home Action</item>
        <item>Recent Apps</item>
        <item>Notifications Action</item>
        <item>Power Menu</item>
        <item>Quick Settings</item>
        <item>Scroll Left</item>
        <item>Scroll Right</item>
        <item>Scroll Up</item>
        <item>Scroll Down</item>
        <item>Default Action</item>
    </string-array>

    <string-array name="suggestion_types">
        <item>Feature Request</item>
        <item>Usability Improvement</item>
        <item>Language Translation</item>
        <item>Other</item>
    </string-array>

    <string-array name="bug_severity">
        <item>Critical (App crashes)</item>
        <item>Major (App Malfunctions/ Unusable)</item>
        <item>Minor (Graphical / Minor hiccups)</item>
    </string-array>

</resources>
