<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="config" type="com.android.ms8.fingerprintcontrols.data.Configuration"/>
    </data>

    <android.support.v7.widget.CardView android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        app:cardElevation="16dp"
                                        app:cardCornerRadius="8dp" android:layout_marginBottom="-8dp">
        <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.kinda.mtextfield.TextFieldBoxes
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textLongMessage"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="@dimen/list_margin_start"
                        android:layout_marginEnd="@dimen/list_margin_start"
                        android:layout_marginBottom="16dp"
                        app:minCharacters="20"
                        app:hasClearButton="true"
                        tools:text="Name"
                        android:ems="10"
                        android:id="@+id/editText"
                        app:labelText="@string/desc"
                        android:minHeight="@dimen/min_text_height"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/suggestionSpinner"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">

                    <com.kinda.mtextfield.ExtendedEditText
                            android:id="@+id/extended_edit_text"
                            android:layout_width="match_parent"
                            android:minHeight="@dimen/min_text_height"
                            tools:text="blah blah blah blah blah blah blah"
                            android:layout_height="wrap_content"/>

                </com.kinda.mtextfield.TextFieldBoxes>
                <TextView
                        android:text="@string/suggestion_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/suggestionTypeTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textAppearance="@style/AppTheme.TextAppearance.SubHeader"
                        android:fontFamily="@font/robot_regular"
                        android:layout_marginTop="16dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginStart="@dimen/list_margin_start"
                />

                <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
                         android:spinnerMode="dropdown"
                         android:id="@+id/suggestionSpinner"
                         android:entries="@array/suggestion_types"
                         app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/suggestionTypeTitle"
                         android:layout_marginEnd="32dp" android:layout_marginStart="@dimen/list_margin_start"
                         android:layout_marginBottom="16dp"
                         app:layout_constraintVertical_bias="0.0" android:layout_marginTop="8dp"
                         app:layout_constraintHorizontal_bias="0.0"
                />
                <Button
                        android:text="@android:string/cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/cancelBtn" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                        app:layout_constraintVertical_bias="0.0"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        app:layout_constraintHorizontal_bias="1.0" app:layout_constraintEnd_toStartOf="@+id/sendBtn"
                        android:layout_marginEnd="8dp" android:layout_marginBottom="16dp"/>
                <Button
                        android:text="@string/send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sendBtn" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/editText"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="32dp" app:layout_constraintVertical_bias="0.0"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        app:layout_constraintStart_toEndOf="@+id/cancelBtn" android:layout_marginStart="8dp"
                        app:layout_constraintHorizontal_bias="0.5" android:layout_marginBottom="16dp"/>

            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>

</layout>
